@@ -12,6 +12,12 @@
 	Minor adjustment: if there are no function arguments,
 	do not add trailing empty spaces to listing.
 
+2007-09-19  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-bts-mode): Added
+	`tinydebian-bts-mail-ctrl-merge'.
+	(tinydebian-bts-mail-ctrl-merge): New.
+
 2007-09-16  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydebian.el (tinydebian-reportbug): Correct alias
